--- a/personal/index.html
+++ b/personal/index.html
@@ -25,6 +25,10 @@
 			left: 40%;		
 		}	
 
+		figure {
+			right: 55%;
+		}
+
 		section:first-of-type p {
 			background-color: #f5f5dc;
 			margin-top: 40px;
@@ -37,16 +41,15 @@
 	<body>
 		<nav>
 			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
-		</nav>	
+		</nav>
+		<figure><img src="img/Nport.jpg"></figure>	
 		<article>
 			<section>
-				<p>Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.</p>
-				<p>歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>除此之外我也對學習德語感到興趣。</p>				
-			</section>
-			<section>
+				<p>Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.</p><br/>
 				Besides, I am learning a hard foreign language now!<br/> 
-				<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span>			
-			</section>		
+				<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span>
+				<p>歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>除此之外我也對學習德語感到興趣。</p>				
+			</section>	
 		</article>
 	</body>
 </html>
