--- a/personal/ay.html
+++ b/personal/ay.html
@@ -41,13 +41,15 @@
 				top: 90%;
 				opacity: 0.9;
 				margin-left: 60%;
-				background-color: #ffb6c1;
 				font-family: 'Noto Sans TC', sans-serif;
+			}
+			article:last-of-type {
+				background-color: #ffb6c1;
 			}
 
 			figure {
 				position: relative;
-				left: 45%;
+				left: 60%;
 			}
 	
 		</style>
