--- a/personal/index.html
+++ b/personal/index.html
@@ -26,6 +26,7 @@
 		}	
 
 		figure {
+			top: 20px;
 			right: 55%;
 		}
 
@@ -42,7 +43,7 @@
 		<nav>
 			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
 		</nav>
-		<figure><img src="img/Nport.jpg"></figure>	
+		<figure><img src="img/Nport.jpg">This is my hometown, Nanliao.</figure>	
 		<article>
 			<section>
 				<p>Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.</p><br/>
