--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -51,11 +51,13 @@
 		}
 
 		figure {
+			position: relative;
 			margin-top: 30px;
 		}
 
 		div {
-			left: 10px;
+			position: relative;
+			left: 55%;
 		}
 
 		div p {
