--- a/personal/ay.html
+++ b/personal/ay.html
@@ -43,7 +43,7 @@
 				margin-left: 60%;
 				font-family: 'Noto Sans TC', sans-serif;
 			}
-			article:last-of-type {
+			article:last-of-type p {
 				background-color: #ffb6c1;
 			}
 
