--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -63,9 +63,8 @@
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
 					<li><b>Para #1</b> - Section #2 mentions a report from <q>the International Energy Agency</q>, carrying on the topic of the global actions. While the previous paragraph mentions that <q>The transition away from coal, oil and natural gas</q> is not happening fast enough, the report discusses about how to <q>accelerate the shift away from fossil fuels</q>.</li>
-					<li><b>Para #2</b> - In the next paragraph of the same section, the first statement <q>In recent years, many once-promising dementia drugs...</q> still includes the keywords related to the main topic such as <q>dementia drugs</q>, which is a key to build a smooth transition. Furthermore, at the beginning of the statement, the author also uses <q>in recent years</q> to tell the readers that the focus in this paragraph is changed to things that had just happened.</li>
-					<li><b>Para #3</b> - </li>
-					<li><b>Para #4</b> - </li>
+					<li><b>Para #2</b> - In the beginning of this paragraph, it further elaborates on the discoveries in <q>the new report</q> that is mentioned in the first paragraph. The first sentence, <q> the world has made significant strides in the fight against climate change</q>, also repeats the words in the previous quote, <q> The world has made a remarkable amount of progress on clean energy</q>.</li>
+					<li><b>Para #3</b> - The beginning paragraph includes the same key word, <q> governments</q>, strongly connected to the former paragraph. And the rest of the sentences elaborates on the examples what the governments in each nation have been doing to protect the environment.</li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
