--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -69,9 +69,9 @@
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
-					<li><b>Para #1</b> - In the second sentence of the first paragraph <q>Such efforts could help...</q>, the author uses the phrase <q>such effort</q> to refer to <q>early detection</q> in the previous sentence, which is a strategy involving the use of <b>demonstrative adjective</b> to emphasize the focus of the current writing.</li>
-					<li><b>Para #2</b> - In the third sentence of the next paragraph <q>It could also bring improvements...</q>, the author uses a <b>pronoun</b> <q>it</q> to refer to <q>identifying risks earlier</q> in the previous statement and create the logical connection.</li>
-					<li><b>Para #3</b> - </li>
+					<li><b>Para #1</b> - This paragraph includes a long sentence and uses the relative cause <b>that</b> as a strategy to make a link. Besides, it uses a lot of commas as well.</li>
+					<li><b>Para #2</b> - The quote mainly makes a <b>repetition</b> of the previous contents.</li>
+					<li><b>Para #3</b> - The second sentence is making specific examples and elaborate on the first sentence.</li>
 					<li><b>Para #4</b> - </li>
 				</ul>
 				<h3><a href="example.html#sec3">[Sec. #3]</a></h3>
