--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -44,6 +44,7 @@
 					<li><b><a href="example.html#sec1">[Sec. #1]</a> - Fossil-fuel use can decline after reaching a peak, but the world needs to take stronger action</b><br/>
 					The first sentence of this section serves as the thesis statement, and the topic talks about major challenges in face of reducing fossil-fuel use. The key phrases like <q>the global use of fossil fuels</q> and <q>planet-warming carbon dioxide emissions</q> clearly indicate the focus. Besides, the words like <q>global</q> and <q>governments</q> refer to the main subjects in the essay.</li>
 					<li><b><a href="example.html#sec2">[Sec. #2]</a> - A report from the International Energy Agency shows the global efforts</b><br/>
+					There are many specific examples from a <q>report</q>in this sections. For exmples, which <q>governments</q> are making efforts and  
 					</li>
 					<li><b><a href="example.html#sec3">[Sec. #3]</a> - </b><br/>
 					</li>
@@ -72,7 +73,7 @@
 					<li><b>Para #1</b> - This paragraph includes a long sentence and uses the relative cause <b>that</b> as a strategy to make a link. Besides, it uses a lot of commas as well.</li>
 					<li><b>Para #2</b> - The quote mainly makes a <b>repetition</b> of the previous contents.</li>
 					<li><b>Para #3</b> - The second sentence is making specific examples and elaborate on the first sentence.</li>
-					<li><b>Para #4</b> - </li>
+					<li><b>Para #4</b> - The second sentence is also making specific examples and talking about what nations are taking actions and what <q>policies</q> have been made, elaborating on the first sentence.</li>
 				</ul>
 				<h3><a href="example.html#sec3">[Sec. #3]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
