--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -44,7 +44,7 @@
 					<li><b><a href="example.html#sec1">[Sec. #1]</a> - Fossil-fuel use can decline after reaching a peak, but the world needs to take stronger action</b><br/>
 					The first sentence of this section serves as the thesis statement, and the topic talks about major challenges in face of reducing fossil-fuel use. The key phrases like <q>the global use of fossil fuels</q> and <q>planet-warming carbon dioxide emissions</q> clearly indicate the focus. Besides, the words like <q>global</q> and <q>governments</q> refer to the main subjects in the essay.</li>
 					<li><b><a href="example.html#sec2">[Sec. #2]</a> - A report from the International Energy Agency shows the global efforts</b><br/>
-					There are many specific examples from a <q>report</q>in this sections. For exmples, which <q>governments</q> are making efforts and  
+					There are many specific examples from a <q>report</q>in this sections. For exmples, which <q>governments</q> are making efforts and what kinds of efforts are they doing. 
 					</li>
 					<li><b><a href="example.html#sec3">[Sec. #3]</a> - </b><br/>
 					</li>
@@ -81,7 +81,7 @@
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
 				</ul>
-				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
+				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
@@ -92,7 +92,7 @@
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
 				</ul>
-				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
+				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
@@ -103,7 +103,7 @@
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
 				</ul>
-				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
+				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
@@ -114,7 +114,7 @@
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
 				</ul>
-				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
+				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
@@ -125,7 +125,7 @@
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
 				</ul>
-				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
+				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - </li>
 					<li><b>Para #2</b> - </li>
