--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -78,12 +78,12 @@
 				<h3><a href="example.html#sec3">[Sec. #3]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
-					<li><b>Para #1</b> - </li>
+					<li><b>Para #1</b> - The first sentence talks about the topic that is mentioned in the first paragraph again. And it uses the word <q>as a result</q> to make the coherence with the previous paragraph.</li>
 					<li><b>Para #2</b> - </li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
-					<li><b>Para #1</b> - </li>
+					<li><b>Para #1</b> - In the first sentence, there is a linker <q>as a result</q>. In the second sentence, the essay uses linkers like <q>despite</q>, <q> while</q>, and <q>as</q> to make the cohesion in the paragraph.</li>
 					<li><b>Para #2</b> - </li>
 				</ul>
 				<h3><a href="example.html#sec4">[Sec. #4]</a></h3>
