--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -48,7 +48,7 @@
 					</li>
 					<li><b><a href="example.html#sec3">[Sec. #3]</a> - </b><br/>
 					</li>
-					<li><b><a href="example.html#sec3">[Sec. #4]</a> - </b><br/>
+					<li><b><a href="example.html#sec3">[Sec. #4]</a> - The progress to clean energies is not fast enough to prevent serious consequences of global warming</b><br/>
 					</li>
 					<li><b><a href="example.html#sec3">[Sec. #5]</a> - </b><br/>
 					</li>
@@ -79,23 +79,23 @@
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
 					<li><b>Para #1</b> - The first sentence talks about the topic that is mentioned in the first paragraph again. And it uses the word <q>as a result</q> to make the coherence with the previous paragraph.</li>
-					<li><b>Para #2</b> - </li>
+					<li><b>Para #2</b> - <q>Ever since World War II…</q> mentions about particular time session as the former paragraph mentions about different years like <q>by the mid-2020s</q>, <q>fall between now and 2050</q>, and<q>by the 2030s</q>.</li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - In the first sentence, there is a linker <q>as a result</q>. In the second sentence, the essay uses linkers like <q>despite</q>, <q> while</q>, and <q>as</q> to make the cohesion in the paragraph.</li>
-					<li><b>Para #2</b> - </li>
+					<li><b>Para #2</b> - The first sentence uses a <b>summary word</b>, <q>that</q>, referring to the description in the former paragraph. </li>
 				</ul>
 				<h3><a href="example.html#sec4">[Sec. #4]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
-					<li><b>Para #1</b> - </li>
-					<li><b>Para #2</b> - </li>
+					<li><b>Para #1</b> - This paragraph uses the linker <q>even so</q> as a transition from the previous topic to the next focus.</li>
+					<li><b>Para #2</b> - In the second sentence, <q>such an outcome</q> makes coherence to <q> perilous consequences</q> by talking about the similar topic. </li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
-					<li><b>Para #1</b> - </li>
-					<li><b>Para #2</b> - </li>
+					<li><b>Para #1</b> - The sentence uses <b>synonyms</b> skill. The words, <q>this shift</q>, is the replacing word of <q> a turning point </q>.</li>
+					<li><b>Para #2</b> - The second sentence uses a time phrase <q>last month</q> as a linker to the first sentence.</li>
 				</ul>
 				<h3><a href="example.html#sec5">[Sec. #5]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
