--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -133,7 +133,8 @@
 			</section>
 			<section>
 				<h2>Take-home Message</h2>
-				
+				The author wants to raise the attention and make a warn that <span style="background-color: #80cdc1;">tackling the global warming needs caution and a good plan.
+				<q>The new report also warns that the transition to a cleaner energy economy could prove bumpy without careful planning. Over the past six years, global investment in new oil and natural gas development has sagged, particularly in the wake of the pandemic. But if the world doesn’t invest heavily enough in clean energy alternatives to replace those sources, many countries could find themselves in an energy crunch, as Europe is currently experiencing this fall.</q>				
 			</section>
 		</article>
 	</body>
